--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.3",
     "core-js": "^3.6.5",
     "nanoid": "^3.1.25",
+    "resolve": "^1.20.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
